RESOLVED FIXED157803
webkitEnterFullscreen() does not require a user gesture when RequireUserGestureForAudioRateChange is set.
https://bugs.webkit.org/show_bug.cgi?id=157803
Summary webkitEnterFullscreen() does not require a user gesture when RequireUserGestu...
Jer Noble
Reported 2016-05-17 11:16:35 PDT
webkitEnterFullscreen() does not require a user gesture when RequireUserGestureForAudioRateChange is set.
Attachments
Patch (9.29 KB, patch)
2016-05-17 11:19 PDT, Jer Noble
no flags
Archive of layout-test-results from ews103 for mac-yosemite (837.65 KB, application/zip)
2016-05-17 11:45 PDT, Build Bot
no flags
Archive of layout-test-results from ews105 for mac-yosemite-wk2 (967.92 KB, application/zip)
2016-05-17 12:08 PDT, Build Bot
no flags
Archive of layout-test-results from ews115 for mac-yosemite (1.42 MB, application/zip)
2016-05-17 12:20 PDT, Build Bot
no flags
Patch (9.31 KB, patch)
2016-05-17 13:18 PDT, Jer Noble
eric.carlson: review+
buildbot: commit-queue-
Archive of layout-test-results from ews125 for ios-simulator-wk2 (642.97 KB, application/zip)
2016-05-17 14:12 PDT, Build Bot
no flags
Jer Noble
Comment 1 2016-05-17 11:19:16 PDT
Build Bot
Comment 2 2016-05-17 11:45:14 PDT
Comment on attachment 279139 [details] Patch Attachment 279139 [details] did not pass mac-ews (mac): Output: http://webkit-queues.webkit.org/results/1337532 New failing tests: media/media-fullscreen-inline.html media/video-autoplay-allowed-but-fullscreen-required.html
Build Bot
Comment 3 2016-05-17 11:45:17 PDT
Created attachment 279141 [details] Archive of layout-test-results from ews103 for mac-yosemite The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews103 Port: mac-yosemite Platform: Mac OS X 10.10.5
Build Bot
Comment 4 2016-05-17 12:08:14 PDT
Comment on attachment 279139 [details] Patch Attachment 279139 [details] did not pass mac-wk2-ews (mac-wk2): Output: http://webkit-queues.webkit.org/results/1337615 New failing tests: media/media-fullscreen-inline.html media/video-autoplay-allowed-but-fullscreen-required.html
Build Bot
Comment 5 2016-05-17 12:08:17 PDT
Created attachment 279143 [details] Archive of layout-test-results from ews105 for mac-yosemite-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews105 Port: mac-yosemite-wk2 Platform: Mac OS X 10.10.5
Build Bot
Comment 6 2016-05-17 12:20:42 PDT
Comment on attachment 279139 [details] Patch Attachment 279139 [details] did not pass mac-debug-ews (mac): Output: http://webkit-queues.webkit.org/results/1337620 New failing tests: media/media-fullscreen-inline.html media/video-autoplay-allowed-but-fullscreen-required.html
Build Bot
Comment 7 2016-05-17 12:20:46 PDT
Created attachment 279145 [details] Archive of layout-test-results from ews115 for mac-yosemite The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews115 Port: mac-yosemite Platform: Mac OS X 10.10.5
Jer Noble
Comment 8 2016-05-17 13:18:09 PDT
Eric Carlson
Comment 9 2016-05-17 13:22:59 PDT
Comment on attachment 279159 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=279159&action=review > Source/WebCore/html/HTMLMediaElement.cpp:472 > + // Relax RequireUserGestureForFullscreen when videoPlaybackRequiresUserGesture and audioPlaybackRequiresUserGesture is not set: Nit: ':' -> '.'
Build Bot
Comment 10 2016-05-17 14:12:35 PDT
Comment on attachment 279159 [details] Patch Attachment 279159 [details] did not pass ios-sim-ews (ios-simulator-wk2): Output: http://webkit-queues.webkit.org/results/1338056 New failing tests: http/tests/performance/performance-resource-timing-cached-entries.html
Build Bot
Comment 11 2016-05-17 14:12:38 PDT
Created attachment 279163 [details] Archive of layout-test-results from ews125 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews125 Port: ios-simulator-wk2 Platform: Mac OS X 10.11.4
Jer Noble
Comment 12 2016-05-18 15:48:41 PDT
Note You need to log in before you can comment on or make changes to this bug.