webkitEnterFullscreen() does not require a user gesture when RequireUserGestureForAudioRateChange is set. https://bugs.webkit.org/show_bug.cgi?id=157803

Reviewed by Eric Carlson.

Source/WebCore:

Test: media/video-play-audio-require-user-gesture.html

Refactor the setting of restrictions in the HTMLMediaElement constructor, and in so doing, only
relax the RequireUserGestureForFullscreen restriction if both videoPlaybackRequiresUserGesture()
and audioPlaybackRequiresUserGesture() settings are not set.

* html/HTMLMediaElement.cpp:
(WebCore::HTMLMediaElement::HTMLMediaElement):

LayoutTests:

* media/video-play-audio-require-user-gesture-expected.txt: Added.
* media/video-play-audio-require-user-gesture.html: Added.

Canonical link: https://commits.webkit.org/175988@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@201109 268f45cc-cd09-0410-ab3c-d52691b4dbfc